k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tensorqueue-api
  namespace: tensorqueue
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"   # allow image uploads
spec:
  ingressClassName: nginx
  rules:
    - host: tensorqueue.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tensorqueue-api
                port:
                  number: 80
